--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <header>
        <nav class="header_navigation">
         <div class="nav_div1">
-        <img class="nav_image" alt="image" height="70px" width="70px" src="/imaggee.jpg"/>
+        <img class="nav_image" alt="image" height="70px" width="70px" src="./imaggee.jpg"/>
         </div> 
         <div class="nav_div2">
          <ul class="nav_div_list">
