--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 <div id="3rd" class="divofcontact">
-    <div class="main_div_para2 div_contact">
+    <div class="main_div_para2 contact_head">
         CONTACT
     </div>
     <div class="main_div_para2 para8 div_contact_para"><strong>For Furthur details contact undersigned:</strong></div>
